<resources>
    <string name="app_name">Weather Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA5fwAKFDFlrBUmjIBs-wBtbm9c5Lo6AVs</string>
    <string name="need_permission">Need Permission</string>
    <string name="want_app_to_access_alerts">Weather Application wants to access alerts in your device?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="notification_channel_title">title</string>
    <string name="humidity">Humidity</string>
    <string name="clouds">Clouds</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="remove">remove</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="choose_your_preferences">choose your preferences</string>
    <string name="save_alarm">save alarm</string>
    <string name="time">Time</string>
    <string name="to">End Date</string>
    <string name="from">Start Date</string>
    <string name="choose_your_alarm">Choose Your Alarm</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="search_location">Search Location</string>
    <string name="save">save</string>
    <string name="dismiss">Dismiss</string>
    <string name="not_provided">N/A</string>
</resources>