<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:context=".settings.SettingsFragment">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_text"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:text="@string/language"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_text"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <RadioGroup
            android:id="@+id/language_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="129dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_radio_group"
            android:checkedButton="@+id/english_radio_button"
            android:padding="20dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/english_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark_blue" />

            <RadioButton
                android:id="@+id/arabic_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark_blue" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/location_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_radio_group"
            android:checkedButton="@+id/gps_radio_button"
            android:padding="20dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/gps_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark_blue" />

            <RadioButton
                android:id="@+id/map_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark_blue" />
        </RadioGroup>

        <TextView

            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_text"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/temperature"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_radioGroup" />

        <TextView

            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_text"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/wind_speed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView6" />

        <RadioGroup

            android:id="@+id/temperature_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_radio_group"
            android:checkedButton="@+id/celsius_radio_btn"
            android:padding="20dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton

                android:id="@+id/celsius_radio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celsius"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark_blue" />

            <RadioButton

                android:id="@+id/kelvin_radio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kelvin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark_blue" />

            <RadioButton

                android:id="@+id/fahrenheit_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark_blue" />
        </RadioGroup>

        <RadioGroup

            android:id="@+id/speed_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_radio_group"
            android:checkedButton="@+id/mete_radio_btn"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <RadioButton

                android:id="@+id/mete_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meter_sec"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark_blue"/>

            <RadioButton

                android:id="@+id/mile_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mile_hour"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/dark_blue" />
        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>