<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/setUpFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherapplication.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="isFromFav"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="isFromMap"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="favouriteData"
            android:defaultValue="@null"
            app:argType="com.example.weatherapplication.models.FavouritesData"
            app:nullable="true" />
        <argument
            android:name="location"
            android:defaultValue="@null"
            app:argType="com.example.weatherapplication.models.MapLocation"
            app:nullable="true" />

    </fragment>
    <fragment
        android:id="@+id/favouritesFragment"
        android:name="com.example.weatherapplication.favourite.FavouritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites">
        <action
            android:id="@+id/action_favouritesFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_favouritesFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/setUpFragment"
        android:name="com.example.weatherapplication.home.SetUpFragment"
        android:label="fragment_set_up"
        tools:layout="@layout/fragment_set_up" >
        <action
            android:id="@+id/action_setUpFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_setUpFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.weatherapplication.map.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <argument
            android:name="isFromFav"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="isFromSettingsOrDialogue"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="isFromAlert"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_mapsFragment_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
        <action
            android:id="@+id/action_mapsFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/settingsFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_mapsFragment_to_selectAlertSpecificationsFragment"
            app:destination="@id/selectAlertSpecificationsFragment" />
    </fragment>
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.example.weatherapplication.alert.AlertFragment"
        android:label="@string/alerts">
        <action
            android:id="@+id/action_alertFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/alertFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_alertFragment_to_selectAlertSpecificationsFragment"
            app:destination="@id/selectAlertSpecificationsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weatherapplication.settings.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settingsFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectAlertSpecificationsFragment"
        android:name="com.example.weatherapplication.alert.SelectAlertSpecificationsFragment"
        android:label="fragment_select_alert_specifications"
        tools:layout="@layout/fragment_select_alert_specifications" >
        <argument
            android:name="latitude"
            app:argType="float"
            android:defaultValue="0" />
        <argument
            android:name="longitude"
            app:argType="float"
            android:defaultValue="0" />
        <argument
            android:name="location"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_selectAlertSpecificationsFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/action_selectAlertSpecificationsFragment_to_alertFragment"
            app:destination="@id/alertFragment" />

    </fragment>
</navigation>